crates/gossamer-diagnostics/tests/snapshots/GT0027.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0027]: A `match` / `if let` arm patterns a `json::Value` scrutinee with a - here
--- framed ---
error[GT0027]: A `match` / `if let` arm patterns a `json::Value` scrutinee with a
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
