crates/gossamer-diagnostics/tests/snapshots/GT0028.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0028]: `.downgrade()` was called on a by-value type with no runtime RC - here
--- framed ---
error[GT0028]: `.downgrade()` was called on a by-value type with no runtime RC
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
