crates/gossamer-diagnostics/tests/snapshots/GT0034.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0034]: A struct constructor used syntax that does not match its declaration. - here
--- framed ---
error[GT0034]: A struct constructor used syntax that does not match its declaration.
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
