crates/gossamer-diagnostics/tests/snapshots/GT0035.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0035]: A struct initializer omitted a required field. Supply every declared - here
--- framed ---
error[GT0035]: A struct initializer omitted a required field. Supply every declared
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
