crates/gossamer-diagnostics/tests/snapshots/GT0036.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0036]: A struct initializer specified the same field more than once. Remove - here
--- framed ---
error[GT0036]: A struct initializer specified the same field more than once. Remove
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
